fix: z-index of menu

--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -22,6 +22,7 @@
   padding: 0 29px;
   position: sticky;
   top: 0;
+  z-index: 20;
   background-color: #def6ff;
   box-shadow: 0px 4px 4px 0px #00000020;
 
